<resources>
    <string name="app_name">Crave Better</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="last">Last name</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="mobile_number">Mobile Number</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">LogOut</string>
    <string name="name">Name</string>
    <string name="first">First Name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="change_email">Change Email</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="test_number">1234</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="cuisines">Cuisines</string>
    <string name="city">City</string>
    <string name="total">Total</string>
    <string name="confirm_your_order">Confirm Your Order</string>
    <string name="rs_0">Rs. 0</string>
    <string name="add_balance">Add Balance</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="ratings">Ratings</string>
    <string name="order_now">Order Now</string>
    <string name="reviews">Reviews</string>
    <string name="crave_nbetter">Crave Better</string>
    <string name="this_place_has_no_reviews">This place has no reviews</string>
    <string name="cuisine">Cuisine</string>
    <string name="todo">TODO</string>
    <string name="add_a_review">Add a review</string>
    <string name="write_a_review">Write a review</string>


</resources>
