<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RestaurantOperations.ConfirmFragment"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/confirmYourOrder"
            android:layout_width="376dp"
            android:layout_height="109dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:gravity="center"
            android:text="@string/confirm_your_order"
            android:textSize="40sp" />

        <ListView
            android:id="@+id/carItemsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/total"
                android:layout_width="50dp"
                android:layout_height="32dp"
                android:layout_marginStart="124dp"
                android:gravity="center"
                android:text="@string/total"
                />

            <TextView
                android:id="@+id/totalValue"
                android:layout_width="54dp"
                android:layout_height="35dp"
                android:layout_marginStart="128dp"
                android:gravity="center"
                android:text="@string/rs_0"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

