<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfilePage.UserProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/cocktail"
        android:elevation="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/FirstNameInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="348dp"
        android:text="@string/first"
        android:fontFamily="@font/salsa"
        />


    <EditText
        android:id="@+id/EditFirstNameInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/salsa"
        android:ems="10"
        android:maxLength="15"
        android:maxLines="1"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text="@string/first"
        android:layout_alignBaseline="@id/FirstNameInProfile" />

    <TextView
        android:id="@+id/LastNameInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/FirstNameInProfile"
        android:text="@string/last"
        android:fontFamily="@font/salsa"
         />

    <EditText
        android:id="@+id/editLastNameInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditFirstNameInProfile"
        android:layout_marginStart="128dp"
        android:layout_alignBaseline="@id/LastNameInProfile"
        android:ems="10"
        android:maxLength="15"
        android:maxLines="1"
        android:fontFamily="@font/salsa"
        android:text="@string/last"
        android:enabled="false"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/mobileInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LastNameInProfile"
        android:layout_marginStart="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/mobile_number"
        android:fontFamily="@font/salsa"
         />

    <EditText
        android:id="@+id/editMobileInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/mobileInProfile"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/test_number"
        android:maxLength="10"
        android:fontFamily="@font/salsa"
        android:maxLines="1"
        android:enabled="false"
         />



</RelativeLayout>